k8s/pgbouncer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgbouncer
  namespace: crashlab
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgbouncer
  template:
    metadata:
      labels:
        app: pgbouncer
    spec:
      containers:
        - name: pgbouncer
          image: pgbouncer/pgbouncer:latest
          ports:
            - containerPort: 6432
---
apiVersion: v1
kind: Service
metadata:
  name: pgbouncer
  namespace: crashlab
spec:
  selector:
    app: pgbouncer
  ports:
    - port: 6432
      targetPort: 6432
